fdo#62815 - tolerate crazy / out-of-bound ScreenNumbers for FullScreen

Thus making the gtk+ backend more similar to the generic backend
in this regard; also be more strict about invalid monitors -> empty
screens.

Change-Id: Ia4f2e1205cb1d309fb1bb01f9631167339a3478e